--- a/prompt.css
+++ b/prompt.css
@@ -4,6 +4,7 @@ body {
   background-color: #212121;
   color: #efefef;
   text-align : center;
+  
 }
 
 .current_prompt {
@@ -11,4 +12,7 @@ body {
   border-style:solid;
   border-color:#efefef;
   padding: 1em;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
