--- a/prompt.css
+++ b/prompt.css
@@ -4,7 +4,12 @@ body {
   background-color: #212121;
   color: #efefef;
   text-align : center;
-  
+}
+
+.icon {
+  width: 15%;
+  height: auto;
+  min-width: 200px;
 }
 
 .current_prompt {
@@ -12,7 +17,10 @@ body {
   border-style:solid;
   border-color:#efefef;
   padding: 1em;
-  width: 300px;
+  width: 50%;
+  max-width: 2000px;
+  min-width: 300px;
   margin-left: auto;
   margin-right: auto;
+  font-size:4vw;
 }
