--- a/prompt.css
+++ b/prompt.css
@@ -6,6 +6,10 @@ body {
   text-align : center;
 }
 
+.text-center {
+  text-align : center;
+}
+
 .icon {
   width: 15%;
   height: auto;
@@ -23,4 +27,18 @@ body {
   margin-left: auto;
   margin-right: auto;
   font-size:4vw;
+}
+
+.form-prompts {
+  height: 100px;
+  width: 300px;
+  text-align: center;
+  font-size: 16px;
+}
+
+.form-index {
+  height: 30px;
+  width: 30px;
+  text-align: center;
+  font-size: 16px;
 }
